@@ -7,6 +7,8 @@
 * Those frontend settings stored in profiles need not be stored in general
   settings.
 * When paper in use, hide other geometry widgets
+* When saving profile, if name already exists,
+  add warning and don't duplicate the combobox text
 
 
 1.5.0 (11.06.2016):
